# ModelTripwire

./: .gitignore  AGENT_REGISTRY.md  AGENT_RUNBOOKS.md  AGENT_SAFEGUARDS.md  AGENT_SCORECARDS.md  CARUSO_GROWTH_ROOM_GUIDE.md  CARUSO_PRODUCT_LAB_ROOM_GUIDE.md  CARUSO_PRODUCT_ROOM_GUIDE.md  CHANGELOG.md  CHANNEL_ARCHITECTURE_PLAN.md  CHANNEL_MIGRATION_MAP.md  COMMAND_CENTER_ROOM_GUIDE.md  COMMUNICATION_RELIABILITY_PLAN.md  CROSS_ROOM_HANDOFF_STANDARD.md  CURRENT_PLATFORM_STATE.md  CUTOVER_CHECKLIST.md  DASHBOARD_SCHEMA_V1.md  ENGINEERING_QA_LOOP.md  ENGINEERING_ROOM_GUIDE.md  ENGINEERING_WORKFLOW.md  GAME_PROJECT_OPERATING_SPEC.md  JOB_CATALOG.md  JOB_OPERATING_GUIDE.md  LIVE_CONFIG_AUDIT_2026-03-24.md  MEMORY.md  MISSION_CONTROL_DATA_SOURCES.md  MISSION_CONTROL_IMPLEMENTATION_PLAN.md  MISSION_CONTROL_OFFICE_MODE.md  MISSION_CONTROL_OFFICE_WIREFRAMES.md  MISSION_CONTROL_PLAN.md  MISSION_CONTROL_SNAPSHOT_SPEC.md  MISSION_CONTROL_WIREFRAMES.md  NEW_AGENT_AND_JOB_CHECKLIST.md  OPENCLAW_ORG_BLUEPRINT.md  OPERATING_SYSTEM_INDEX.md  OPERATIONS_CHANGELOG.md  OPS_DESK_ROOM_GUIDE.md  QA_ROOM_GUIDE.md  README.md  RESEARCH_LAB_ROOM_GUIDE.md  (+12 more)
modeltripwire/: README.md  benchmark_gates.py  benchmark_runner.py  benchmarks.py  cli.py  config.py  logging_utils.py  pyproject.toml  release_gates.py  setup.py  trend_gates.py
modeltripwire/agents/: filters.py
modeltripwire/evals/: __init__.py  dataset_loader.py  runner.py
modeltripwire/experiments/: baseline_safety_stress_test.py
modeltripwire/models/: __init__.py  schemas.py
modeltripwire/modeltripwire/: __init__.py  benchmarks.py  (+3 more)
(+182 files in other folders)
