[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modeltripwire"
version = "0.1.0"
description = "AI safety evaluation, red teaming, and tripwire detection framework for LLMs and agentic systems"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Open Source" }]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "pandas>=2.2.0",
  "matplotlib>=3.8.0",
  "PyYAML>=6.0.1",
  "typer>=0.12.0",
]

[project.scripts]
modeltripwire = "modeltripwire.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["modeltripwire*"]
